Update deep learning fundamentals

--- a/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
+++ b/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/importlib/_bootstrap.py:321: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf"
    ]
@@ -669,23 +678,24 @@
    "source": [
     "## TensorFlow Cross Entropy\n",
     "\n",
-    "When you're using softmax, your output is a vector. One vector is the probability values from the output units. You can also express your data labels as a vector using what's called one-hot encoding.\n",
+    "When you're using softmax, your output is a vector that contains probability distribution over output logits. You can express your data labels as a vector using what's called `one-hot encoding`.\n",
     "\n",
-    "This just means that you have a vector the length of the number of classes, and the label element is marked with a 1 while the other labels are set to 0. In the case of classifying digits, our label vector for the image of the number 4 would be:\n",
+    "`one-hot encoding` means that you have a vector the length of which is the number of classes, and the target label is marked with a 1 while the other labels are set to 0. In the case of classifying digits, our label vector for the image of the number 4 would be:\n",
     "\n",
     "y = [0,0,0,0,1,0,0,0,0,0]\n",
     "\n",
-    "And our output prediction vector could be something like\n",
+    "And our output prediction vector could be something like:\n",
     "\n",
-    "y_hat = [0.047,0.048,0.061,0.07,0.330,0.062,0.001,0.213,0.013,0.150].\n",
+    "$\\hat{y}$ = [0.047,0.048,0.061,0.07,0.330,0.062,0.001,0.213,0.013,0.150].\n",
     "\n",
-    "We want our error to be proportional to how far apart these vectors are. To calculate this distance, we'll use the cross entropy. Then, our goal when training the network is to make our prediction vectors as close as possible to the label vectors by minimizing the cross entropy. The cross entropy calculation is shown below:\n",
+    "\n",
+    "We want our error to be proportional to how far apart these two vectors are. To calculate this distance, we'll use the `cross entropy`. Then, our goal while training the network is to make our prediction vectors as close as possible to the label vectors by minimizing the cross entropy. The cross entropy calculation is shown below:\n",
     "\n",
     "<img src=\"images/cross_entropy.png\" alt=\"Drawing\" style=\"width:60%;height:60%\"/>\n",
     "\n",
-    "As you can see above, the cross entropy is the sum of the label elements times the natural log of the prediction probabilities. Note that this formula is not symmetric! Flipping the vectors is a bad idea because the label vector has a lot of zeros and taking the log of zero will cause an error.\n",
+    "As you can see above, the cross entropy is the sum of the label vector times the natural log of the prediction vector. Note that this formula is not symmetric! Flipping the vectors is a bad idea because the label vector has a lot of zeros and taking the log of zero will cause an error.\n",
     "\n",
-    "What's cool about using one-hot encoding for the label vector is that y_j is 0 except for the one true class. Then, all terms in that sum except for where y_j=1 are zero and the cross entropy is simply D=−ln(y_hat) for the true label. For example, if your input image is of the digit 4 and it's labeled 4, then only the output of the unit corresponding to 4 matters in the cross entropy cost.\n",
+    "What's cool about using one-hot encoding for the label vector is that $y_j$ is 0 except for the one true class. Then, all terms in that sum except for where $y_j=1$ are zero and the cross entropy is simply $D=−ln(\\hat{y})$ for the true label. For example, if your input image is of the digit 4 and it's labeled 4, then only the output of the unit corresponding to 4 matters in the cross entropy cost.\n",
     "\n",
     "* As with the softmax function, TensorFlow has a function to do the cross entropy calculations for us.\n",
     "* To create a cross entropy function in TensorFlow, you'll need to use two new functions:\n",
@@ -729,20 +739,20 @@
     }
    ],
    "source": [
-    "# softmax_data = np.array([1.2, 0.9, 0.4])\n",
-    "softmax_data = np.array([0.45659032, 0.3382504, 0.20515925])\n",
+    "# probability distribution vector\n",
+    "prod_dist_data = np.array([0.45659032, 0.3382504, 0.20515925])\n",
+    "# one hot vector\n",
     "one_hot_data = np.array([1.0, 0.0, 0.0])\n",
     "\n",
-    "print(softmax_data.shape)\n",
+    "print(prod_dist_data.shape)\n",
     "\n",
-    "softmax = tf.placeholder(tf.float32)\n",
+    "prod_dist = tf.placeholder(tf.float32)\n",
     "one_hot = tf.placeholder(tf.float32)\n",
     "\n",
-    "# cross_entropy = -tf.reduce_sum(one_hot * tf.log(softmax))\n",
-    "cross_entropy = -tf.reduce_sum(tf.multiply(one_hot, tf.log(softmax)))\n",
+    "cross_entropy = -tf.reduce_sum(tf.multiply(one_hot, tf.log(prod_dist)))\n",
     "\n",
     "with tf.Session() as sess:\n",
-    "    output = sess.run(cross_entropy, feed_dict={softmax:softmax_data, one_hot:one_hot_data})\n",
+    "    output = sess.run(cross_entropy, feed_dict={prod_dist:prod_dist_data, one_hot:one_hot_data})\n",
     "    print(output)"
    ]
   },
@@ -750,65 +760,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "tensorflow provides a method computing the the cross entropy called [<b style='color: red'>tf.nn.softmax_cross_entropy_with_logits()</b>](https://www.tensorflow.org/api_docs/python/tf/nn/softmax_cross_entropy_with_logits)\n",
+    "tensorflow provides a function computing the the cross entropy called [<b style='color: red'>tf.nn.softmax_cross_entropy_with_logits()</b>](https://www.tensorflow.org/api_docs/python/tf/nn/softmax_cross_entropy_with_logits)\n",
     "\n",
     "* It computes softmax cross entropy between logits and labels.\n",
     "\n",
     "* Measures the probability error in discrete classification tasks in which the classes are mutually exclusive (each entry is in exactly one class). For example, each CIFAR-10 image is labeled with one and only one label: an image can be a dog or a truck, but not both.\n",
     "\n",
-    "> NOTE: While the classes are mutually exclusive, their probabilities need not be. All that is required is that each row of labels is a valid probability distribution. If they are not, the computation of the gradient will be incorrect.\n",
+    "> While the classes are mutually exclusive, their probabilities need not be. All that is required is that each row of labels is a valid probability distribution. If they are not, the computation of the gradient will be incorrect.\n",
     "\n",
     "> If using exclusive labels (wherein one and only one class is true at a time), see sparse_softmax_cross_entropy_with_logits.\n",
     "\n",
-    "> WARNING: This op expects <b style='color: red'>unscaled</b> logits, since it performs a softmax on logits internally for efficiency. <b style='color: red'>Do not call this op with the output of softmax</b>, as it will produce incorrect results.\n",
+    "* Other important points\n",
     "\n",
-    "* logits and labels must have the same shape, e.g. [batch_size, num_classes] and the same dtype (either float16, float32, or float64).\n",
+    "> This operation expects **unscaled logits**, since it performs a softmax on logits internally for efficiency. Do not call this operation with the output of softmax, as it will produce incorrect results.\n",
     "\n",
-    "* Note that to avoid confusion, it is required to pass only named arguments to this function.\n",
+    "> `logits` and `labels` must have the same shape, e.g. `[batch_size, num_classes]` and the same dtype (either float16, float32, or float64).\n",
     "\n",
-    "Args:\n",
+    "> To avoid confusion, it is required to pass only named arguments to this function.\n",
     "\n",
-    "* _sentinel: Used to prevent positional parameters. Internal, do not use.\n",
-    "* labels: Each row labels[i] must be a valid probability distribution.\n",
-    "* logits: Unscaled log probabilities.\n",
-    "* dim: The class dimension. Defaulted to -1 which is the last dimension.\n",
-    "* name: A name for the operation (optional).\n",
+    "The most important arguments for this function are:\n",
+    "* `labels`: Each row labels[i] must be a valid probability distribution.\n",
+    "* `logits`: Unscaled log probabilities.\n",
+    "* `dim`: The class dimension. Defaulted to -1 which is the last dimension.\n",
     "\n",
-    "Returns:\n",
-    "* A 1-D Tensor of length batch_size of the same type as logits with the softmax cross entropy loss."
+    "It returns a **1-D tensor of length `batch_size`** of the same type as logits with the softmax cross entropy loss.\n",
+    "\n",
+    "Backpropagation in this version of softmax cross entropy will happen only into logits. To calculate a cross entropy loss that allows backpropagation into both logits and labels, see [tf.nn.softmax_cross_entropy_with_logits_v2](https://www.tensorflow.org/api_docs/python/tf/nn/softmax_cross_entropy_with_logits_v2)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3,)\n",
-      "0.783969\n"
+      "logit shape (3, 3)\n",
+      "one hot shape (3, 3)\n",
+      "[0.78396875 0.7679496  1.2729189 ]\n",
+      "0.9416124\n"
      ]
     }
    ],
    "source": [
-    "logit = np.array([1.2, 0.9, 0.4])\n",
-    "one_hot_data = np.array([1.0, 0.0, 0.0])\n",
+    "logit = np.array([[1.2, 0.9, 0.4],[0.8, 0.9, 1.4],[1.2, 0.9, 1.1]])\n",
+    "one_hot = np.array([[1.0, 0.0, 0.0],[0, 0, 1.0],[0, 1.0, 0]])\n",
     "\n",
-    "# tot =  np.sum(- one_hot_data * np.log(softmax_data))\n",
-    "# print(tot)\n",
+    "print('logit shape', logit.shape)\n",
+    "print('one hot shape', one_hot.shape)\n",
     "\n",
-    "print(softmax_data.shape)\n",
-    "\n",
-    "softmax = tf.placeholder(tf.float32)\n",
-    "one_hot = tf.placeholder(tf.float32)\n",
+    "logit_placeholder = tf.placeholder(tf.float32)\n",
+    "one_hot_placeholder = tf.placeholder(tf.float32)\n",
     "\n",
     "# NOTE: you should take the tf.log() of the softmax\n",
-    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits=logit, labels=one_hot)\n",
+    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits=logit_placeholder, labels=one_hot_placeholder)\n",
     "with tf.Session() as sess:\n",
-    "    output = sess.run(cross_entropy, feed_dict={softmax:softmax_data, one_hot:one_hot_data})\n",
+    "    output = sess.run(cross_entropy, feed_dict={logit_placeholder:logit, one_hot_placeholder:one_hot})\n",
+    "    print(output)\n",
+    "    \n",
+    "# tf.nn.softmax_cross_entropy_with_logits returns a 1-D tensor of length batch_size of the same type \n",
+    "# as logits. \n",
+    "# Each element in the returned tensor is a cross entropy for a logit with its corresponding one hot vector. \n",
+    "# To compute the average cross entropy of all training examples, we use tf.reduce_mean function.\n",
+    "cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=logit_placeholder, \n",
+    "                                                                       labels=one_hot_placeholder))\n",
+    "with tf.Session() as sess:\n",
+    "    output = sess.run(cross_entropy, feed_dict={logit_placeholder:logit, one_hot_placeholder:one_hot})\n",
     "    print(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[tf.reduce_mean](https://www.tensorflow.org/versions/r1.0/api_docs/python/tf/reduce_mean) computes the mean of elements across specified dimensions of a tensor.\n",
+    "\n",
+    "> Reduces input_tensor along the dimensions given in axis. Unless keep_dims is true, the rank of the tensor is reduced by 1 for each entry in axis. If keep_dims is true, the reduced dimensions are retained with length 1.\n",
+    "\n",
+    "> If axis has no entries, all dimensions are reduced, and a tensor with a single element is returned\n",
+    "\n",
+    "The most important arguments for this function:\n",
+    "* `input_tensor`: The tensor to reduce. Should have numeric type.\n",
+    "* `axis`: The dimensions to reduce. If None (the default), reduces all dimensions.\n",
+    "* `keep_dims`: If true, retains reduced dimensions with length 1.\n",
+    "\n",
+    "It returns the reduced tensor.\n",
+    "\n",
+    "As shown in the code, we are using `tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=Y))` to compute the loss of all the training examples in a mini-batch. \n",
+    "* `tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=Y)` computes a 1-D tensor in which each element is the softmax cross entropy value for one training example and there are totally `batch_size` of them.\n",
+    "* Then, the `tf.reduce_mean` computes the mean of the `batch_size` number of softmax cross entropy values.\n"
    ]
   },
   {
