Update deep learning fundamentals

--- a/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
+++ b/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -799,8 +799,8 @@
      "text": [
       "logit shape (3, 3)\n",
       "one hot shape (3, 3)\n",
-      "[0.78396875 0.7679496  1.2729189 ]\n",
-      "0.9416124\n"
+      "cross entropy: [0.78396875 0.7679496  1.2729189 ]\n",
+      "cross entropy mean 0.9416124\n"
      ]
     }
    ],
@@ -818,7 +818,7 @@
     "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits=logit_placeholder, labels=one_hot_placeholder)\n",
     "with tf.Session() as sess:\n",
     "    output = sess.run(cross_entropy, feed_dict={logit_placeholder:logit, one_hot_placeholder:one_hot})\n",
-    "    print(output)\n",
+    "    print('cross entropy:', output)\n",
     "    \n",
     "# tf.nn.softmax_cross_entropy_with_logits returns a 1-D tensor of length batch_size of the same type \n",
     "# as logits. \n",
@@ -828,7 +828,7 @@
     "                                                                       labels=one_hot_placeholder))\n",
     "with tf.Session() as sess:\n",
     "    output = sess.run(cross_entropy, feed_dict={logit_placeholder:logit, one_hot_placeholder:one_hot})\n",
-    "    print(output)"
+    "    print('cross entropy mean', output)"
    ]
   },
   {
