--- a/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
+++ b/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
@@ -22,11 +22,12 @@
     "\n",
     "<img src=\"images/tf_graph.png\" alt=\"tf_graph\" style=\"width:60%;height:60%\"/>\n",
     "\n",
-    "* [to to edited] Each node represents a operation (variable and placeholder are all operations) holding some values or computational logits performing some computation on other values. \n",
-    "    * For example, in above graph, A, B and D are variables/placeholders while C and E are computational logits that perform computation on A, B and C, D respectively.\n",
+    "* TensorFlow graph has two general computation units: \n",
+    "    * `Nodes`, represent mathematical operations\n",
+    "    * `Edges`, represent tensors (multi-dimensional arrays) that hold values passing through the graph\n",
     "* Note that: when we are constructing the graph, values are not known and they are represented by either `variables` or `placeholders`\n",
     "* When we start running the computation on the constructed graph, we will feed values into the graph through the variables and placeholders.\n",
-    "    * `Variables` store values that can be updated during computation and are initialized before graph computation You must explicitly call operation like tf.global_variables_initializer with session.run to initialize all variables. Typically, weights and biases are represented by variables.\n",
+    "    * `Variables` store values that can be updated during computation and are initialized before graph computation You must explicitly call operation like `tf.global_variables_initializer` with session.run to initialize all variables. Typically, weights and biases are represented by variables.\n",
     "    * `Placeholders` store values that can not be updated during the computation and are provided by user (outside of the graph). Typically, external inputs such as training, testing samples and some hyperparameters are represented by placeholders.\n",
     "\n",
     "**Why Graph**\n",
@@ -203,15 +204,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "### tf.Session()\n",
     "\n",
-    "\n",
-    "* A \"TensorFlow Session\" is an environment for running a graph. The session is in charge of allocating the operations to GPU(s) and/or CPU(s), including remote machines. \n",
+    "* A \"TensorFlow Session\" is an environment for running a graph. A graph only run computations after creation of a session. The session is in charge of allocating the operations to GPU(s) and/or CPU(s), including remote machines. \n",
     "* Why we need session?\n",
     "    * Session is kind of separating running a constructed tensorflow graph from the construction of that tensorflow graph. It will allocate necessary computational resources (be it a CPU, a GPU or multiple GPUs) via configuration when we actually running the graph\n",
-    "* The following code creates a session instance `sess` using [`tf.Session`](https://www.tensorflow.org/api_docs/python/tf/Session). \n",
+    "* The following code creates a session instance `sess` using [`tf.Session`](https://www.tensorflow.org/api_docs/python/tf/Session). We defines a session within a `with` block. So, after running the with block, the session will close automatically.\n",
     "    * The `sess.run()` function then evaluates the tensor and returns the results."
    ]
   },
@@ -388,7 +386,7 @@
    "source": [
     "You might expect that adding a variable (e.g., `x = tf.Variable(5)`) would add one operation to the graph, but in fact that one line adds four operations.\n",
     "\n",
-    "> The tf.`global_variables_initializer()` call returns an operation that will initialize all TensorFlow variables from the graph. You call the operation using a session to initialize all the variables as shown above. Using the tf.Variable class allows us to change the weights and bias, but an initial value needs to be chosen.\n",
+    "> The `tf.global_variables_initializer()` call returns an operation that will initialize all TensorFlow variables from the graph. You call the operation using a session to initialize all the variables as shown above. Using the tf.Variable class allows us to change the weights and bias, but an initial value needs to be chosen.\n",
     "\n",
     "> Initializing the weights with random numbers from a normal distribution is good practice. Randomizing the weights helps the model from becoming stuck in the same place every time you train it. \n",
     "\n",
@@ -1471,7 +1469,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1485,7 +1483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
