--- a/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
+++ b/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
@@ -629,7 +629,7 @@
    "source": [
     "## TensorFlow Softmax\n",
     "\n",
-    "> The softmax function squashes it's inputs, typically called <b style='color: red'>logits</b> or logit scores, to be between 0 and 1 and also normalizes the outputs such that they all sum to 1. \n",
+    "> The softmax function squashes it's inputs, typically called <b style='color: red'>logits</b> or logit scores, to be between 0 and 1 and also normalizes the outputs such that they all sum up to 1. \n",
     "\n",
     ">This means the output of the softmax function is equivalent to a categorical probability distribution. It's the perfect function to use as the output activation for a network predicting multiple classes.\n",
     "\n",
