--- a/convolutional-neural-network/convolutional_neural_network_in_Tensorflow.ipynb
+++ b/convolutional-neural-network/convolutional_neural_network_in_Tensorflow.ipynb
@@ -14,11 +14,12 @@
     "This will construct a Convolutional Neural Network (CNN) in TensorFlow step by step.\n",
     "* A convolutional network typically has two parts: \n",
     "    * convolution part for constructing feature representations from the original images\n",
-    "        * convolutional layers\n",
-    "        * pooling layers\n",
-    "        * dropout layers\n",
+    "        * convolutional layers (feature detection, noise reducing)\n",
+    "        * activation layers (Non linearity)\n",
+    "        * pooling layers (sub sampling)\n",
+    "        * dropout layers (regularization)\n",
     "    * fully-connected part \n",
-    "        * multiple fully-connected layers like normal multilayer neural network\n",
+    "        * multiple fully-connected layers like normal multilayer neural network (classification)\n",
     "\n",
     "<img src=\"images/cnn_architecture.png\" alt=\"Drawing\"/>"
    ]
@@ -371,14 +372,14 @@
     "\n",
     "> When someone says they are using a stride of 3, they usually mean <b style='color: red'>tf.nn.conv2d(x, W, strides=[1, 3, 3, 1])</b>.\n",
     "\n",
-    "To make life easier, the code is using tf.nn.bias_add() to add the bias. Using tf.add() doesn't work when the tensors aren't the same shape."
+    "To make life easier, the code is using `tf.nn.bias_add()` to add the bias. Using `tf.add()` doesn't work when the tensors aren't the same shape."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"### Max Pooling\n",
+    "### Max Pooling\n",
     "\n",
     "<img src=\"images/pooling_example.png\" alt=\"Drawing\"/>\n",
     "\n",
@@ -473,6 +474,7 @@
     "> If one component of shape is the special value -1, the size of that dimension is computed so that the total size remains constant. In particular, a shape of [-1] flattens into 1-D. At most one component of shape can be -1.\n",
     "\n",
     "* tf.reshape(conv2, [-1, 3316]) means that \n",
+    "\n",
     "> If we flatten conv2 to a 2-D matrix and the second dimension of the matrix is defined as 3316, the first dimension of the matrix can be inferred by: (the total size of the matrix) / 3316\n",
     "\n",
     "**another way**\n",
@@ -671,7 +673,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -685,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
