--- a/convolutional-neural-network/residual_networks/Residual_Networks_keras [S].ipynb
+++ b/convolutional-neural-network/residual_networks/Residual_Networks_keras [S].ipynb
@@ -3169,7 +3169,7 @@
    "launcher_item_id": "jK9EQ"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -3183,7 +3183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
