--- a/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_multilayer_neural_network.ipynb
+++ b/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_multilayer_neural_network.ipynb
@@ -447,7 +447,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -461,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
