--- a/recurrent_neural_network/recurrent_neural_network_fundations/[S] RNN_core_workflow_tensorflow.ipynb
+++ b/recurrent_neural_network/recurrent_neural_network_fundations/[S] RNN_core_workflow_tensorflow.ipynb
@@ -73,7 +73,7 @@
     "    embed = tf.nn.embedding_lookup(embedding, inputs)\n",
     "```\n",
     "\n",
-    "The code above creates a embedding lookup matrix with shape (n_words, embed_size), where `n_words` is the size of the word vocabulary and `embed_dim` is <b>embedding dimension</b> that is the dimension of the vector representing a word after embedding. \n",
+    "The code above creates a embedding lookup matrix with shape `(n_words, embed_size)`, where `n_words` is the size of the word vocabulary and `embed_dim` is <b>embedding dimension</b> that is the dimension of the vector representing a word after embedding. \n",
     "\n",
     "After embedding lookup, the training examples would have shape `(batch_size, num_steps, embed_dim)` "
    ]
@@ -157,16 +157,17 @@
     "outputs, final_state = tf.nn.dynamic_rnn(cell, inputs, initial_state=initial_state)\n",
     "```\n",
     "\n",
-    "### Arguments for tf.nn.dynamic_rnn(...) \n",
+    "### Important Arguments for tf.nn.dynamic_rnn(...) \n",
     "\n",
     "the `initial_state` is the initial values of the cell state that is passed between the hidden layers in successive time steps. `tf.nn.dynamic_rnn` takes care of most of the work for us. We pass in our cell and the input to the cell. Then it does the unrolling and everything else for us.\n",
     "\n",
     "* `cell`: An instance of RNNCell.\n",
     "* `inputs`: The RNN inputs. The `inputs` typicall is the word embedding from the embedding layer.\n",
-    "    * If time_major == False (default), this must be a Tensor of shape: [batch_size, max_time, ...], or a nested tuple of such elements. \n",
-    "    * If time_major == True, this must be a Tensor of shape:[max_time, batch_size, ...], or a nested tuple of such elements. \n",
-    "        * <b>The first two dimensions must match across all the inputs</b>, but otherwise the ranks and other shape components may differ. In this case, \n",
-    "        * Input to cell at each time-step will replicate the structure of these tuples, except for the time dimension (from which the time is taken). <b>The input to cell <b style='color:red'>at each time step</b> will be a Tensor or (possibly nested) tuple of Tensors each with dimensions [batch_size, ...]<b>.\n",
+    "    * If `time_major == False` (default), this must be a Tensor of shape: `[batch_size, max_time, ...]`, or a nested tuple of such elements. If `time_major == True`, this must be a Tensor of shape:`[max_time, batch_size, ...]`, or a nested tuple of such elements. \n",
+    "        * <b>The first two dimensions must match across all the inputs</b>, but otherwise the ranks and other shape components may differ.\n",
+    "        *  In this case, Input to `cell` at each time-step will replicate the structure of these tuples, except for the time dimension (from which the time is taken). <b>The input to cell <b style='color:red'>at each time step</b> will be a Tensor or (possibly nested) tuple of Tensors each with dimensions [batch_size, ...]<b>.\n",
+    "    \n",
+    "* `sequence_length`: (optional) An int32/int64 vector sized `[batch_size]`. Used to copy-through state and zero-out outputs when past a batch element's sequence length. So it's more for performance than correctness.\n",
     "\n",
     "* `initial_state`: (optional) An initial state for the RNN. If cell.state_size is an integer, this must be a Tensorof appropriate type and shape [batch_size, cell.state_size]. If cell.state_size is a tuple, this should be a tuple of tensors having shapes [batch_size, s] for s in cell.state_size.\n",
     "\n",
