--- a/recurrent_neural_network/recurrent_neural_network_fundations/tensorflow_dynamic_rnn_in_depth.ipynb
+++ b/recurrent_neural_network/recurrent_neural_network_fundations/tensorflow_dynamic_rnn_in_depth.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,23 +37,23 @@
      "text": [
       "X batch shape: (4, 2, 3)\n",
       "outputs with shape:  (4, 2, 5)\n",
-      "[[[ 0.0982992   0.91937888  0.03790487 -0.54347765 -0.00692416]\n",
-      "  [ 0.99998456  1.          0.99177212  0.99987334  0.99939644]]\n",
+      "[[[ 0.26563498  0.7901162  -0.04719456 -0.63463414 -0.6468265 ]\n",
+      "  [ 0.979671    0.9999997  -0.9999951  -1.          0.94411176]]\n",
       "\n",
-      " [[ 0.97107625  0.99995422  0.75952923  0.60435373  0.87907934]\n",
+      " [[ 0.86490893  0.99936175 -0.95814496 -0.9997732  -0.2148238 ]\n",
       "  [ 0.          0.          0.          0.          0.        ]]\n",
       "\n",
-      " [[ 0.9994756   1.          0.96049631  0.96466023  0.99186504]\n",
-      "  [ 0.97324771  0.99998188  0.81755435  0.99450946  0.97564179]]\n",
+      " [[ 0.9820751   0.99999833 -0.99899626 -0.9999999   0.32155177]\n",
+      "  [-0.4239914   0.99997723 -0.9995422  -0.99999917  0.9095594 ]]\n",
       "\n",
-      " [[ 0.99778575  0.98422712  0.97891462  0.99996006  0.99962366]\n",
-      "  [ 0.12011302  0.96819985  0.18604073  0.9268809   0.67240906]]]\n",
+      " [[ 0.99794966  0.9768379  -0.9960348  -0.99998283  0.95770204]\n",
+      "  [-0.9442492   0.9921287  -0.9632983  -0.998922    0.85448444]]]\n",
       "==================================================================\n",
       "h states with shape:  (4, 5)\n",
-      "[[ 0.99998456  1.          0.99177212  0.99987334  0.99939644]\n",
-      " [ 0.97107625  0.99995422  0.75952923  0.60435373  0.87907934]\n",
-      " [ 0.97324771  0.99998188  0.81755435  0.99450946  0.97564179]\n",
-      " [ 0.12011302  0.96819985  0.18604073  0.9268809   0.67240906]]\n"
+      "[[ 0.979671    0.9999997  -0.9999951  -1.          0.94411176]\n",
+      " [ 0.86490893  0.99936175 -0.95814496 -0.9997732  -0.2148238 ]\n",
+      " [-0.4239914   0.99997723 -0.9995422  -0.99999917  0.9095594 ]\n",
+      " [-0.9442492   0.9921287  -0.9632983  -0.998922    0.85448444]]\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
     "\n",
     "> Therefore, we can see that values for the second time step of the second example are zeros in the `outputs`. More importantly, since the first time step of the second example is the last time step that has been handled, the final state for the second example contains the state from the first time step rather than the second time step\n",
     "\n",
-    "the state is a convenient tensor that holds the last actual RNN state, ignoring the zeros. The output tensor holds the outputs of all cells, so it doesn't ignore the zeros. That's the reason for returning both of them."
+    "> The state is a convenient tensor that holds the last actual RNN state, ignoring the zeros. The output tensor holds the outputs of all cells, so it doesn't ignore the zeros. That's the reason for returning both of them."
    ]
   },
   {
@@ -285,7 +285,7 @@
     "    * `states_val[1]` is the last step hidden states with shape:  `(batch_size, state_size)` => (4, 5)\n",
     "\n",
     "**Point 2: More specifically, we observe that tf.nn.dynamic_rnn returns:**\n",
-    "* `outputs_val` contains hidden states for each sample in a batch over <b>every time step</b>. In this particular example:\n",
+    "* `outputs_val` contains hidden states over <b>every time step</b> for each sample (i.e. sequence) in a batch. In this particular example:\n",
     "    * 2 steps\n",
     "    * a batch of 4 examples, each has 5 dimensions.\n",
     "* <b style=\"color:red\">NOTE</b> `states_val[0]` contains the memory states from last time step (Normally we do not use this)\n",
@@ -293,6 +293,13 @@
     "    * final state only involves one time step (i.e., the last one)\n",
     "    * a batch of 4 states, each for an example. \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
